fix: fixing card/img alignment

--- a/www/components/card/card.css
+++ b/www/components/card/card.css
@@ -9,10 +9,6 @@
     word-wrap: break-word;
     background-color: #fff;
     background-clip: initial;
-    border: 1px solid rgba(0,0,0,.125);
-    border-radius: .25rem;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
     text-align: center;
 
     & .body {
@@ -62,12 +58,12 @@
   }
 
   & .card-img-top {
-    width: 100%;
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
     & img {
-      padding:10px;
+      width: 100%;
+      max-width: 200px;
     }
   }
 }
