--- a/www/styles/theme.css
+++ b/www/styles/theme.css
@@ -45,7 +45,7 @@ a {
 }
 
 .content-wrapper {
-  background-color: #efefef;
+  background-color: white;
 }
 
 .wrapper {
